--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 boto3==1.29.3
 botocore==1.32.3
+dj-database-url==2.1.0
 Django==4.2.7
 django-environ==0.11.2
 django-heroku==0.3.1
 gunicorn==21.2.0
 psycopg2-binary==2.9.9
+
 
